# PyRust_Engine

./: .env.example  .gitignore  PROJECT_STATUS.md  README.md  docker-compose.yml
core_api_py/: config.py  requirements.txt
core_api_py/app/: __init__.py  decorators.py  models.py  routes.py
infra/env/: .gitkeep  dashboard.env.example  python.env.example  rust.env.example
infra/scripts/: start_dev.sh
pricing_engine_rs/: Cargo.toml  Dockerfile
pricing_engine_rs/src/: main.rs  pricing_logic.rs
services/dashboard/: README.md  requirements.txt
services/dashboard/app/: main.py  scheduler.py
services/dashboard/app/client/: api_client.py
services/dashboard/app/screens/: asteroids.py  home.py  logs.py  pipeline.py
services/dashboard/app/widgets/: asteroid_table.py  log_viewer.py  stats_panel.py
services/python-api/: requirements.txt
services/python-api/app/: main.py
services/python-api/app/core/: config.py  dto_mapper.py  mongodb.py  nasa_client.py  pipeline.py  rust_client.py
services/python-api/app/models/: asteroid.py  dto.py
services/python-api/app/routes/: analysis.py  logs.py  nasa.py  orchestration.py
services/python-api/app/utils/: logger.py
services/rust-engine/: Cargo.toml
services/rust-engine/src/: main.rs
services/rust-engine/src/api/: asteroid.rs  mod.rs
services/rust-engine/src/domain/: asteroid.rs  error.rs  mod.rs  risk.rs
services/rust-engine/src/dto/: asteroid_dto.rs  mod.rs
services/rust-engine/src/logic/: mod.rs
