[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# JSON Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP Middleware
tower-http = { version = "0.6.8", features = ["trace"] }

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Async Runtime
tokio = { version = "1", features = ["full"] }
axum = "0.8.7"

